# Pratice

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  conanfile.txt
cpp/: CMakeLists.txt  conanfile.txt
cpp/include/: benchmark_test_ex.h  polymorph_subtype.h  polymorpy_adhoc.h  random_number.h
cpp/src/: CMakeLists.txt
cpp/src/benchmark_test_ex/: benchmark.cpp  main.cpp
cpp/src/coroutine/: CMakeLists.txt  coroutine.cpp  main.cpp
cpp/src/generator/: CMakeLists.txt  main.cpp
cpp/src/polymorph_test/: main.cpp
cpp/src/random_number/: random_number.cpp
include/: CRTP.h  benchmark_test2.h  benchmark_test3.h
python/: Fibonacci.py  add.py
src/: CMakelists.txt
src/benchmark_test_ex/: CMakeLists.txt  benchmark.cpp  main.cpp
src/polymorph_test/: CMakeLists.txt
src/random_number/: CMakeLists.txt  main.cpp
